# gosh

./: .gitignore  Cargo.toml  Changelog.md
docs/: README.org
docs/technical-guide/: architecture.org  bbm-templates.org  si5.json
docs/technical-guide/sp/: .env  input.tera  orca.inp  submit.sh
docs/user-guide/: bbm-runner.org  file-formats.org  gosh-parser.org  gosh-shell.org  workflows.org
examples/dftb/: Cargo.toml
examples/dftb/src/: main.rs
examples/runner/: Cargo.toml
examples/runner/src/: lib.rs  main.rs
scripts/: ase-neb.py  smartneb.py
src/: bbm.rs  cli.rs  lib.rs  main.rs  models.rs  repl.rs
src/adaptors/: gaussian_fchk.rs  gulp.rs  mod.rs  mopac.rs  siesta.rs  vasp.rs
src/apps/: mod.rs
src/apps/optimization/: cg.rs  cg_descent.rs  fire.rs  lbfgs.rs  line.rs  mod.rs  neb.rs
src/models/: blackbox.rs  dftb.rs  lj.rs  mod.rs
templates/: README
templates/dftb+/opt/: dftb_in.hsd  submit.sh
templates/gaussian/: input.hbs  submit.sh
templates/mopac/: 1scf.mop.hbs
templates/mopac/opt/: .env  input.hbs  submit.sh
templates/mopac/sp/: input.hbs
templates/siesta/: default.fdf  input.hbs  submit.sh
templates/siesta-ase/: input.hbs  run.py  submit.sh
templates/vasp/: .env  input-fix-slab1.hbs  input-fix-slab2.hbs  input.hbs  submit.sh
tests/files/C3H8/: C3H8.gjf  Test.FChk  Test.FChk.g03
tests/files/LennardJones/: LJ3.xyz  LJ38.xyz  LJ38r.xyz  LJ55.xyz  LJ75.xyz
tests/files/NEB/: images.mol2
tests/files/model_results/: sample.txt
tests/files/models/: sample.txt
tests/files/models/mopac/: mopac-sp.out  mopac.out
