# [[file:gosh.note::*cargo][cargo:1]]
[package]
name = "gosh"
version = "0.0.28"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Rusty framework for multiscale/multilevel modeling"
homepage = "https://github.com/gosh-rs/gosh"
repository = "https://github.com/gosh-rs/gosh"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*"]

[dependencies]
dotenv = "0.13"
dirs = "2"
tempfile = "3.0"
serde = "1.0"
serde_json = "1.0"
rustyline = {version = "8.2", features = ["with-fuzzy"]} 
rustyline-derive = "0.4"
structopt = "0.3"
clap = "3.0.0-beta.2"
#-------------------------
gosh-core = "0.0.2"
gosh-model = "0.0.13"
gosh-adaptor = "0.0.6"
gosh-database = "0.0.8"
gosh-optim = "0.0.3"
liblbfgs = { version="0.0.15" }
#cg_descent = {git = "https://github.com/ybyygu/cg_descent.rs" }
#-------------------------

[dev-dependencies]
approx = "0.3"

[features]
# for adhoc hacking
adhoc = ["gosh-core/adhoc", "gosh-model/adhoc", "gosh-adaptor/adhoc", "gosh-database/adhoc"]
# cargo:1 ends here
